--- a/WebApp.Entity/WebApp.Entity.csproj
+++ b/WebApp.Entity/WebApp.Entity.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
+		<CheckEolTargetFramework>false</CheckEolTargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
