--- a/WebApp.Logger/WebApp.Logger.csproj
+++ b/WebApp.Logger/WebApp.Logger.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+	  <CheckEolTargetFramework>false</CheckEolTargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
@@ -48,7 +49,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
 
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
-    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.5.0" />
+    <!--<PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.5.0" />-->
     <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
     <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
