--- a/WebApp.Sql/WebApp.Sql.csproj
+++ b/WebApp.Sql/WebApp.Sql.csproj
@@ -1,33 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<CheckEolTargetFramework>false</CheckEolTargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Entities\**" />
-    <Compile Remove="EntityConfiguration\**" />
-    <EmbeddedResource Remove="Entities\**" />
-    <EmbeddedResource Remove="EntityConfiguration\**" />
-    <None Remove="Entities\**" />
-    <None Remove="EntityConfiguration\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Entities\**" />
+		<Compile Remove="EntityConfiguration\**" />
+		<EmbeddedResource Remove="Entities\**" />
+		<EmbeddedResource Remove="EntityConfiguration\**" />
+		<None Remove="Entities\**" />
+		<None Remove="EntityConfiguration\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.16" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.16" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.16" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.16" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.16">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.16" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.16" />
+		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.16" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.16" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.16">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\WebApp.Core\WebApp.Core.csproj" />
-    <ProjectReference Include="..\WebApp.Entity\WebApp.Entity.csproj" />
-    <ProjectReference Include="..\WebApp.Logger\WebApp.Logger.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\WebApp.Core\WebApp.Core.csproj" />
+		<ProjectReference Include="..\WebApp.Entity\WebApp.Entity.csproj" />
+		<ProjectReference Include="..\WebApp.Logger\WebApp.Logger.csproj" />
+	</ItemGroup>
 </Project>
