--- a/WebApp.Logger/WebApp.Logger.csproj
+++ b/WebApp.Logger/WebApp.Logger.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="C:\Users\BS401\.nuget\packages\microsoft.azure.cosmos\3.30.1\contentFiles\any\netstandard2.0\ThirdPartyNotice.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Loggers\Serilogs\Sinks\" />
-    <Folder Include="Providers\Files\" />
   </ItemGroup>
 
   <ItemGroup>
